# raft

./: .gitmodules  .travis.yml  CMakeLists.txt  README.md  build.sh
example/: CMakeLists.txt  main.cc
raft/: CMakeLists.txt  Callback.h  Config.h  Log.cc  Log.h  LogSlice.h  Node.cc  Node.h  Raft.cc  Raft.h  RaftPeer.cc  RaftPeer.h  RaftService.cc  RaftService.h  Random.h  Storage.cc  Storage.h  Struct.h  main.cc  spec.json
